Address review feedback